<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView 
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/title"/>
    
    <ImageView 
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@drawable/logo"/>
    
    <TextView 
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/description"/>
    
    <TextView 
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dip"
        android:text="@string/ending"
        android:textColor="#FF0000"/>
    
    <Button 
        android:id="@+id/btnButton1"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_alignParentBottom="true"
        android:text="@string/button1"/>
    
    <Button 
        android:id="@+id/btnButton2"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button2"/>
    
    <Button 
        android:id="@+id/btnButton3"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button3"/>
    
</RelativeLayout>
